@@ -1,5 +1,5 @@
 /*
- * $Id: cfg.lex,v 1.118 2009/03/09 13:45:28 andrei Exp $
+ * $Id: cfg.lex,v 1.119 2009/03/09 13:45:49 andrei Exp $
  *
  * scanner for cfg files
  *
@@ -306,6 +306,7 @@ TCP_OPT_BUF_WRITE	"tcp_buf_write"|"tcp_async"
 TCP_OPT_CONN_WQ_MAX	"tcp_conn_wq_max"
 TCP_OPT_WQ_MAX		"tcp_wq_max"
 TCP_OPT_RD_BUF		"tcp_rd_buf_size"
+TCP_OPT_WQ_BLK		"tcp_wq_blk_size"
 TCP_OPT_DEFER_ACCEPT "tcp_defer_accept"
 TCP_OPT_DELAYED_ACK	"tcp_delayed_ack"
 TCP_OPT_SYNCNT		"tcp_syncnt"
@@ -608,6 +609,8 @@ EAT_ABLE	[\ \t\b\r]
 									return TCP_OPT_WQ_MAX; }
 <INITIAL>{TCP_OPT_RD_BUF}	{ count(); yylval.strval=yytext;
 									return TCP_OPT_RD_BUF; }
+<INITIAL>{TCP_OPT_WQ_BLK}	{ count(); yylval.strval=yytext;
+									return TCP_OPT_WQ_BLK; }
 <INITIAL>{TCP_OPT_BUF_WRITE}	{ count(); yylval.strval=yytext;
 									return TCP_OPT_BUF_WRITE; }
 <INITIAL>{TCP_OPT_DEFER_ACCEPT}	{ count(); yylval.strval=yytext;
