@@ -1,5 +1,5 @@
 /*
- * $Id: tcp_init.h,v 1.8 2009/03/09 13:45:28 andrei Exp $
+ * $Id: tcp_init.h,v 1.9 2009/03/09 13:45:49 andrei Exp $
  *
  * Copyright (C) 2001-2003 FhG Fokus
  *
@@ -40,6 +40,8 @@
 #define DEFAULT_TCP_MAX_CONNECTIONS 2048 /* maximum connections */
 
 #define DEFAULT_TCP_BUF_SIZE	4096  /* buffer size used for reads */
+
+#define DEFAULT_TCP_WBUF_SIZE	2100 /*  after debugging switch to 4-16k */
 
 struct tcp_child{
 	pid_t pid;
